# AstroBridge

./: .gitignore  COMMAND_GUIDE.md  LICENSE  PHASES_SUMMARY.md  README.md  RELEASE_NOTES.md  WORKLOG.md  demo.py  interactive_demo.py  pyproject.toml  pytest.ini  setup.py
.claude/: launch.json
.github/workflows/: ci.yml  publish.yml
astrobridge/: __init__.py  ai_description.py  analytics.py  benchmarking.py  ccd_calibration.py  connectors.py  database.py  geometry.py  identify.py  jobs.py  lookup.py  models.py  query_engine.py  state_store.py
astrobridge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
astrobridge/api/: __init__.py  orchestrator.py  schemas.py
astrobridge/matching/: __init__.py  base.py  calibrator.py  confidence.py  config.py  probabilistic.py  spatial.py
astrobridge_complete/: README.md  pyproject.toml
docs/: ALGORITHM_AND_SCIENCE.md  Architecture Guide.md  AstroBridge_Research_Paper_Full.aux  AstroBridge_Research_Paper_Full.bbl  AstroBridge_Research_Paper_Full.blg  AstroBridge_Research_Paper_Full.fdb_latexmk  AstroBridge_Research_Paper_Full.fls  AstroBridge_Research_Paper_Full.out  Command Guide.md  Deployment Guide.md  Example Usage.md  Future Improvements.md  Institutional_Capabilities_Matrix.md  Institutional_Catalog_Survey.tex  Institutional_Survey_Report.md  Interactive Demo Guide.md  PHASES_SUMMARY.md  Phases of Development.md  Platforms_and_Catalogs_Matrix.md  RELEASE_NOTES.md  Test Suite Guide.md  WORKLOG.md  astrobridge_ai_astronomy_paper.tex  references.bib
docs-private/: REFERENCES.bib
logs/: verification-2026-04-07.md  verification-connectors-2026-04-07.md  verification-ned-tap-and-tests-2026-04-07.md  verification-simbad-tap-2026-04-07.md  verification-tap-reliability-2026-04-07.md
tests/: tap_fakes.py  test_ai_description.py  test_api.py  test_ccd_calibration.py  test_confidence_scoring.py  test_database.py  test_edge_cases.py  test_identify.py  test_interactive_demo.py  test_live_adapters.py  test_matcher.py  test_new_catalogs.py  test_persistence.py  test_routing.py  test_web.py  tmp_web_state.db
(+31 files in other folders)
